@@ -81,7 +81,8 @@ Slick 7.x-2.0-dev, 2016-06-16
 
 Slick 7.x-2.0-dev, 2016-06-10
 -----------------------------
-- #2745803 by 3blake7: Undefined index: path in slick_fields_field_formatter_view().
+- #2745803 by 3blake7: Undefined index: path in
+  slick_fields_field_formatter_view().
 - Added "Use CSS background" option to simplify the cumbersome "inline css"
   normally provided via hook_slick_skins_info(), and fully lazyloaded as well.
   Be sure to re-save the formatter and enable "Use CSS background" if previously
@@ -360,7 +361,8 @@ Slick 7.x-2.0-dev, 2015-8-19
   This is also to smoothen the transition out to Slick 3.x.
 - Added support for iframe only aspect ratio.
 - Added support for Youtube or Vimeo url using plain text field within file
-  entity of type image to display a video overlay over the main image background.
+  entity of type image to display a video overlay over the main image
+  background.
   Provided as currently file entity doesn't support nested files.
 - Added slick_get_grid_elements() and slick_build_grids() to reuse grid for
   field formatter and Views.
